src/components/header/menu/MenuWindow.module.css
.menu_window {
  position: fixed;
  z-index: 3;
}

.menu_window_container {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--color_2);
  padding: calc(8rem / 16) calc(6rem / 16);
  border-radius: 12px;
  border: 2px solid var(--color_4);
  width: calc(214rem / 16);
  top: 10px;
  left: -90px;
  z-index: 3;
}
.menu_show {
  display: flex;
}
.menu_hidden {
  display: none;
}
.metric_check_show {
  display: block;
}

.metric_check_not_show {
  display: none;
}

.imperial_check_show {
  display: block;
}

.imperial_check_not_show {
  display: none;
}

.switch_button {
  text-align: start;
  color: var(--color_7);
  background: var(--color_2);
  border: 0;
  font-size: calc(16rem / 16);
  line-height: 120%;
  padding: calc(10rem / 16) calc(8rem / 16);
  cursor: pointer;
  width: 100%;
  border-radius: 8px;
}

.switch_button:hover {
  background: var(--color_3);
}

.result {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  gap: calc(9rem / 16);
  padding: calc(0rem / 16) calc(0rem / 16);
  width: 100%;
}

.result_container {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  width: 100%;
  padding: 0 calc(0rem / 16);
}

.result_line {
  width: 100%;
  border: 0.5px solid var(--color_4);
}

.result_box {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  width: 100%;
}

.result_header {
  color: var(--color_5);
  font-weight: 500;
  font-size: calc(14rem / 16);
  line-height: 120%;
  padding: calc(8rem / 16) calc(6rem / 16);
}

.result_option {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  border: 0;
  border-radius: 8px;
  padding: calc(8rem / 16) calc(6rem / 16);
}

.metric_select {
  background: var(--color_3);
}

.metric_not_select {
  background: var(--color_2);
}

.imperial_select {
  background: var(--color_3);
}

.imperial_not_select {
  background: var(--color_2);
}

.result_text {
  font-size: calc(16rem / 16);
  line-height: 120%;
  font-family: "DM Sans", sans-serif;
  color: var(--color_7);
}

.result_check {
  font-family: "DM Sans", sans-serif;
  font-size: calc(16rem / 16);
  width: calc(14rem / 16);
  height: calc(14rem / 16);
}

